--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # compiled
 **/bin/*
 **/obj/*
+
+# settings
 pmtAuth/src/pmtAuth/appsettings.Development.json
 pmtAuth/src/pmtAuth/appsettings.json
 .vscode/launch.json
+
+# migrations
+**/Migrations/*
