--- a/pmtStoryTime/src/pmtStoryTime/pmtStoryTime.csproj
+++ b/pmtStoryTime/src/pmtStoryTime/pmtStoryTime.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Amazon.Lambda.AspNetCoreServer.Hosting" Version="1.7.0" />
     <PackageReference Include="IdentityModel" Version="7.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.6" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.1" />
   </ItemGroup>
 </Project>
